[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Utils/Destroy.gd" type="Script" id=1]
[ext_resource path="res://textures/fx/explosion.png" type="Texture" id=2]
[ext_resource path="res://textures/fx/bright_smoke.png" type="Texture" id=3]
[ext_resource path="res://sounds/item/explosion_dyn.ogg" type="AudioStream" id=4]

[sub_resource type="SphereShape" id=1]
radius = 3.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.258987, 0, 0, Vector2( 1, 0.7112 ), -0.432325, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
gravity = Vector3( 0, 0, 0 )
scale = 5.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.992157, 0.490196, 0, 0.796078 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.34902, 0.00784314, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 128

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
flatness = 0.27
gravity = Vector3( 0, 3, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.34
angular_velocity = 1.0
angular_velocity_random = 1.0
scale = 2.0
color_ramp = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=13]
material = SubResource( 12 )

[node name="Explosion" type="Spatial"]
script = ExtResource( 1 )

[node name="Area_explosion" type="Area" parent="." groups=[
"explosion",
]]
collision_layer = 128
collision_mask = 519

[node name="CollisionShape" type="CollisionShape" parent="Area_explosion"]
shape = SubResource( 1 )

[node name="fx1" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966729, 0 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 6 )
draw_passes = 2
draw_pass_1 = SubResource( 8 )
draw_pass_2 = null

[node name="fx2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966729, 0 )
emitting = false
amount = 14
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 13 )

[node name="sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 5.0
unit_size = 10.0
max_distance = 500.0
[connection signal="area_entered" from="Area_explosion" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area_explosion" to="." method="_on_Area_explosion_body_entered"]
